  file HISTORY.txt.
  
  After Zope 2.11.1 

    Bugs Fixed

      - DateTime conversion of datetime objects with non-pytz tzinfo. 
        Timezones() returns a copy of the timezone list (allows tests to run).
        (Backport of r89373 from trunk).

      - LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers

      - integrated Hotfix-2008-08-12

      - Launchpad #262313: respect the 'Expand macros when editing' flag
        when editing a page template through the ZMI


  Zope 2.11.1 (2008/07/17)

    Bugs Fixed

      - Suppressed DeprecationWarning during import of ZPublisher.Iterators:
        that module needs to use Z2-style interfaces in 2.11, for BBB, but
        the Interface module itself issues the warning on import.

      - Launchpad #246748: added 'immediate' option to sendXXX() methods
        for sending a mail immediately by-passing the zope.sendmail delivery
        mechanism
    
      - Launchpad #246290: fixed backward compatibility issue

      - zope.testing : updated to 3.5.3

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - zope.viewlets: updated to 3.4.2

      - zope.sendmail: updated to 3.5.0 (fixing Launchpad #230831)

      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
        for NotFound errors.

      - fixed outdated transaction.commit(1) call in 
        ZODBMountPoint.SimpleTrailblazer

  Zope 2.11.0 (2008/06/15)

    Restructuring

      - Noted long-standing but silent deprecation of Zope2-style
        interfaces (on import of the Interface package).  That package
        is already gone on the trunk.

    Bugs Fixed

      - Launchpad #229549:  Don't ignore 'debug' flag when rendering
        page templates (thanks to Eric Steele for the patch).

      - Fixed against-the-rules zope.conf option 'fast_listen' to read
        'fast-listen' (dash, not underscore).

  Zope 2.11 rc 1 (2008/05/08)